Fix blob page code block slightly overflows vertically
That makes unpleasant UX, such as almost-full scrollbars and requiring
two-fingers swipe twice (one for scroll `<pre>` and second for the page)

--- a/static/repo-blob-ref.css
+++ b/static/repo-blob-ref.css
@@ -46,6 +46,7 @@
 	padding: 0;
 	padding-inline-start: var(--space-sm);
 	overflow-x: auto;
+	overflow-y: hidden;
 }
 
 .preview-type {
